Add divs for other ducks

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <body>
   <div id="duck1" class="duckAnim"></div>
   <div id="dog1" class="dogAnim"></div>
+  <div id="duck2" class="duckAnim"></div>
+  <div id="duck3" class="duckAnim"></div>
 
 
 </body>
